--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "test.js",
   "scripts": {
     "test": "jest",
-    "start": "node main.js"
+    "start": "node main.js",
+    "docker": "docker build -t first ."
   },
   "author": "",
   "license": "ISC",
